# tmdb-rs

./: .gitlab-ci.yml  Cargo.toml  Makefile  README.md
examples/: append_to_response.rs  basic.rs  find_by_imdb_id.rs
src/: lib.rs  model.rs  themoviedb.rs
