[package]
name = "tmdb"
version = "1.1.0"
authors = ["Wolfhard Prell <wolfhard.prell@gmail.com>"]
description = "The Movie Database (TMDb) API for Rust"
documentation = "https://docs.rs/crate/tmdb"
homepage = "https://gitlab.com/Cir0X/tmdb-rs"
repository = "https://gitlab.com/Cir0X/tmdb-rs"
readme = "README.md"
license = "MIT"

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
reqwest = "0.9.5"
